--- a/pioneiroregular.html
+++ b/pioneiroregular.html
@@ -8,6 +8,7 @@
         <title>Document</title>
 
     </head>
+    <body>
     <div class="bloco-principal ">
         <form action="https://api.sheetmonkey.io/form/gv6ANQz3anDeKwrFxmuJFs" method="post">
             <label>Nome e Sobrenome:</label>
@@ -33,4 +34,5 @@
             return true; // Permite o envio do formulário se o campo estiver preenchido
         }
     </script>
+</body>
 </html>
