--- a/pioneiroregular.html
+++ b/pioneiroregular.html
@@ -13,6 +13,8 @@
         <form action="https://api.sheetmonkey.io/form/gv6ANQz3anDeKwrFxmuJFs" method="post">
             <label>Nome e Sobrenome:</label>
             <input type="text" name="Nome" id="nome">
+            <label>Quantidade de horas:</label>
+            <input type="number" name="horas">
             <label>Estudos:</label>
             <input type="number" name="Estudos">
             <label for="observacao">Observação:</label>
